[gd_scene load_steps=9 format=3 uid="uid://7mt55kks62u0"]

[ext_resource type="Script" path="res://scripts/unlock.gd" id="1_cdkie"]
[ext_resource type="Texture2D" uid="uid://b76e2i1dsepm7" path="res://assets/blackScreen.png" id="2_6xo1x"]
[ext_resource type="Texture2D" uid="uid://d11ux8wjgsv67" path="res://assets/warningBut.png" id="3_7rt6x"]
[ext_resource type="FontFile" uid="uid://cl8ntpdrpicmf" path="res://assets/Born2bSportyV2.ttf" id="4_4n3vj"]
[ext_resource type="Script" path="res://scripts/password_1.gd" id="5_o1mj6"]
[ext_resource type="Script" uid="uid://ylyi48x68rt0" path="res://scripts/land.gd" id="6_uqf5h"]
[ext_resource type="Script" path="res://scripts/password_2.gd" id="6_wyndt"]
[ext_resource type="Script" path="res://scripts/password_3.gd" id="7_m1e48"]

[node name="Unlock" type="Node2D"]
script = ExtResource("1_cdkie")

[node name="Computer" type="Sprite2D" parent="."]
position = Vector2(546, 545.00006)
scale = Vector2(16.937498, 16.96875)
texture = ExtResource("2_6xo1x")

[node name="Button" type="Button" parent="Computer"]
offset_left = -31.763842
offset_top = -33.060776
offset_right = 40.23616
offset_bottom = 38.939224
icon = ExtResource("3_7rt6x")
flat = true

[node name="password1" type="Label" parent="."]
offset_left = 232.0
offset_top = 792.0
offset_right = 379.0
offset_bottom = 840.0
mouse_filter = 0
theme_override_fonts/font = ExtResource("4_4n3vj")
theme_override_font_sizes/font_size = 48
text = "aushdad"
script = ExtResource("5_o1mj6")

[node name="password2" type="Label" parent="."]
offset_left = 471.0
offset_top = 792.0
offset_right = 669.0
offset_bottom = 840.0
mouse_filter = 0
theme_override_fonts/font = ExtResource("4_4n3vj")
theme_override_font_sizes/font_size = 48
text = "P1@s5w0rD"
script = ExtResource("6_wyndt")

[node name="password3" type="Label" parent="."]
offset_left = 776.0
offset_top = 792.0
offset_right = 875.0
offset_bottom = 840.0
mouse_filter = 0
theme_override_fonts/font = ExtResource("4_4n3vj")
theme_override_font_sizes/font_size = 48
text = "1234"
script = ExtResource("7_m1e48")

[node name="land" type="Label" parent="."]
offset_left = 264.0
offset_top = 248.0
offset_right = 856.0
offset_bottom = 320.0
mouse_filter = 0
theme_override_fonts/font = ExtResource("4_4n3vj")
theme_override_font_sizes/font_size = 50
text = "[Drag & drop a STRONG password]"
script = ExtResource("6_uqf5h")
metadata/_edit_use_anchors_ = true

[connection signal="button_up" from="Computer/Button" to="." method="_on_button_button_up"]
